Utilizando JAX-RS para realizar pagamento

--- a/src/main/webapp/resources/css/formularioDoCarrinho.css
+++ b/src/main/webapp/resources/css/formularioDoCarrinho.css
@@ -98,7 +98,7 @@
 }
 
 .formularioDoCarrinho-atualizar {
-	background-image: url(../imagens/refresh.png);
+	background-image: url(../imagens/refresh.png?4957467331228196608);
 	background-repeat: no-repeat;
 	background-position: 50%;
 	background-color: transparent;
